# Chip-8-Emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/header/: chip8.hpp
src/: cycle.cpp  handleInput.cpp  loadRom.cpp  mapSFMLKeyToChip8.cpp  menu.cpp  window.cpp
